[package]
name = "fugue-symbolic"
version = "0.1.0"
authors = ["Sam Thomas <st@xv.ax>"]
edition = "2018"
license = "MIT"

[dependencies]
either = "1"
fugue = { version = "0.2", registry = "fugue" }
hashconsing = { version = "1", registry = "fugue" }
num-traits = "0.2"
parking_lot = "0.11"
thiserror = "1"
z3 = "0.11"
